<resources>
    <string name="app_name">Destinasi</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="no_have_an_account">Tidak punya akun?</string>
    <string name="have_an_account">Sudah punya akun?</string>
    <string name="create_your_account">Buat akun Anda</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>