<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.loginuser.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_location_on" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:paddingRight="32dp"
                android:paddingLeft="32dp">

                <TextView
                    android:id="@+id/secret_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Masuk ke akun anda"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="Email"
                    android:textColor="@color/black"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/black"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxBackgroundMode="outline">
                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Password"
                    android:textColor="@color/black"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/black"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/light_blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="40dp"
                android:paddingRight="32dp"
                android:paddingLeft="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_have_an_account"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/register"
                        android:textColor="@color/light_blue"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

    </LinearLayout>
</ScrollView>